# steve

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
src/: main.rs
src/tools/: echo.rs  elixir_projects.rs  fs.rs  mod.rs  spotify.rs
